SERVER-54410 Disable SBE for queries from OP_QUERY